docs(galaxio-gatling): cut the remaining prose from the new skills
Second pass. What went: the two opening lines that restated the
description and named which file owns what, the meta-instructions on how
to phrase an answer, and the sentences that explained a rule the table
above already stated. Every coordinate, command, error string and
consequence is unchanged.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>